--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,36 @@
-## CovEst
+# covEst
 
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/covEst)](https://cran.r-project.org/package=covEst)
 [![Travis-CI Build Status](https://travis-ci.org/BenBarnard/covEst.svg?branch=master)](https://travis-ci.org/BenBarnard/covEst)
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/BenBarnard/covEst?branch=master&svg=true)](https://ci.appveyor.com/project/BenBarnard/covEst)
 [![Coverage Status](https://img.shields.io/codecov/c/github/BenBarnard/covEst/master.svg)](https://codecov.io/github/BenBarnard/covEst?branch=master)
 
+## Overview
+
+covEst is a covariance estimation suite. I creating other packages we found it useful to separate out our covariance estimation functions and maintain them somewhere else. This package works well with slidR and EqualCov.
+
+In developing covEst we found it useful to have it play nice with the "tidyverse." At this point we have not thought of all the uses and combinations with these packages so if you think of something not currently implemented please file a minimal reproducible example on github.
+
+## Installation
+
+You can install the latest development version from github with
+
+```{r}
+if (packageVersion("devtools") < 1.6) {
+  install.packages("devtools")
+}
+devtools::install_github("benbarnard/covEst")
+```
+
+If you encounter a clear bug, please file a minimal reproducible example on github.
+
+## Example
+
+This is a basic example which shows you how to solve a common problem:
+
+```{r example}
+library(tidyverse)
+library(covEst)
+
+data <- iris %>% select(-Species) %>% as.matrix %>% Haff_shrinkage
+```
