--- a/README.Rmd
+++ b/README.Rmd
@@ -7,9 +7,9 @@
 
 ## Overview
 
-covEst is a covariance estimation suite. I creating other packages we found it useful to separate out our covariance estimation functions and maintain them somewhere else. This package works well with slidR and EqualCov.
+`covEst` is a covariance estimation suite. In creating other packages we found it useful to separate out our covariance estimation functions and maintain them somewhere else. This package works well with `slidR` and `EqualCov`.
 
-In developing covEst we found it useful to have it play nice with the "tidyverse." At this point we have not thought of all the uses and combinations with these packages so if you think of something not currently implemented please file a minimal reproducible example on github.
+In developing `covEst` we found it useful to have it play nice with the `tidyverse` suite of packages. At this point we have not thought of all the uses and combinations with these packages, so if you think of something not currently implemented please file a minimal reproducible example on GitHub.
 
 ## Installation
 
@@ -22,7 +22,7 @@ if (packageVersion("devtools") < 1.6) {
 devtools::install_github("benbarnard/covEst")
 ```
 
-If you encounter a clear bug, please file a minimal reproducible example on github.
+If you encounter a clear bug, please file a minimal reproducible example on GitHub.
 
 ## Example
 
